2008-12-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Minor peephole improvement.

2008-12-29 Raphael Neider <rneider AT web.de>

	* src/pic/pcode.c (insertBankSel, FixRegisterBanking): emit
	  incorrectly discarded BANKSELs

2008-12-29 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/memory.c:
	  Added simple test for memset(), memcpy() and memmove()

2008-12-29 Borut Razem <borut.razem AT siol.net>

	* sdcc/support/scripts/sdcc.nsi: removed $INSTDIR\lib\src\z80\*.c

2008-12-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/peeph.def (177.e): replaced notVolatile(%3) with
	  operandsNotRelated(%1 %3), had to change (a)r%1 to (a)%1 for this to work
	  (177.j): added new rule
	* src/SDCCsymt.h: added RESULT_TYPE_GPTR
	* src/SDCCast.c (processParms): use RESULT_TYPE_GPTR for generic ptr parms,
	  (decorateType CAST): propagate storage class to generic pointer results

2008-12-27 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z80/string.c,
	  device/lib/z80/printf.c,
	  device/lib/z80/mul.s:
	  z80 library cleanup
	* src/z80/gen.c:
	  Fixed code generation bug exposed by builtin memcpy().

2008-12-27 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/_memcpy.c:
	  fixed conflict with builtin memcpy()

2008-12-26 Borut Razem <borut.razem AT siol.net>

	* support/librarian/sdcclib.c:
	  fixed bug 2466950: "sdcclib broken"
	  by removing fgets return value check

2008-12-26 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/main.c,
	  src/z80/gen.c,
	  device/include/string.h: Implemented RFE #1914254

2008-12-26 Philipp Klaus Krause <pkk AT spth.de>
	* device/lib/z80/Makefile.in,
	  device/lib/Makefile.in,
	  device/lib/z80/memmove.s: Implemented RFE #1914256

2008-12-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def: fixed a bug in peephole 0zf
	* src/z80/peep.c: improved checks for unused data
	* src/z80/gen.c,
	  src/z80/main.c: Implemented RFE #1899189
