@@ -212,7 +212,6 @@ tfprintf (FILE *fp, const char *szFormat, ...)
   va_list ap;
   struct dbuf_s dbuf;
   size_t len;
-  size_t res;
 
   dbuf_init (&dbuf, INITIAL_INLINEASM);
 
@@ -221,8 +220,7 @@ tfprintf (FILE *fp, const char *szFormat, ...)
   va_end (ap);
 
   len = dbuf_get_length (&dbuf);
-  res = fwrite(dbuf_get_buf (&dbuf), 1, len, fp);
-  assert(res == len);
+  fwrite(dbuf_get_buf (&dbuf), 1, len, fp);
   dbuf_destroy (&dbuf);
 }
 
